--- a/Jokes_recommender_system/Jokes_recommender_system/Views/Shared/_RecommendPartial.cshtml
+++ b/Jokes_recommender_system/Jokes_recommender_system/Views/Shared/_RecommendPartial.cshtml
@@ -4,10 +4,10 @@
     <hr />
     <div class="row">
         <div class="container pull-right">
-            <a href="@Url.Action("Similar", "Joke")" class="btn btn-warning">
+            <a href="@Url.Action("Similar", "Joke", new { jokeId = Model.Id })" class="btn btn-warning">
                 Similar recommended joke
             </a>
-            <a href="@Url.Action("Different", "Joke")" class="btn btn-warning">
+            <a href="@Url.Action("Different", "Joke", new { jokeId = Model.Id })" class="btn btn-warning">
                 Different recommended joke
             </a>
         </div>
@@ -18,10 +18,10 @@
     <hr />
     <div class="row">
         <div class="container pull-right">
-            <a href="@Url.Action("Similar", "Joke")" class="btn btn-warning disabled">
+            <a href="@Url.Action("Similar", "Joke", new { jokeId = Model.Id })" class="btn btn-warning disabled">
                 Similar recommended joke
             </a>
-            <a href="@Url.Action("Different", "Joke")" class="btn btn-warning disabled">
+            <a href="@Url.Action("Different", "Joke", new { jokeId = Model.Id })" class="btn btn-warning disabled">
                 Different recommended joke
             </a>
         </div>
